syntax = "proto3";

package com.dboyko.rococo.grpc;

option java_multiple_files = true;
option java_package = "com.dboyko.rococo.grpc";
option java_outer_classname = "UserdataProto";

import "google/protobuf/empty.proto";

service UserDataService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
}

message Userdata {
    string userId = 1;
    string username = 2;
    optional string firstname = 3;
    optional string lastname = 4;
    optional string avatar = 5;
}

message GetUserRequest {
    string username = 1;
}

message GetUserResponse {
    Userdata userdata = 1;
}

message UpdateUserRequest {
    Userdata userdata = 1;
}

message UpdateUserResponse {
    Userdata userdata = 1;
}
